--- a/index.html
+++ b/index.html
@@ -186,35 +186,37 @@
         <div class="portfolio-content">
             <div class="portfolio-img">
                 <h2>NewsApp</h2>
-                <img src="../portfolio images/news.png" alt="">
+                <img src="./portfolioimages/news.png" alt="">
                 <button class="gitbtns" ><a href="https://github.com/simranPanjwani20/NewsApp">Check on Github</a></button>
             </div>
             <div class="portfolio-img">
                 <h2>Text Analyser</h2>
-                <img src="../portfolio images/textanalyser.png" alt="">
+                <img src="./portfolioimages/textanalyser.png" alt="">
                 <button class="gitbtns"><a href="https://github.com/simranPanjwani20/TextAnalyser">Check on Github</a></button>
             </div>
             <div class="portfolio-img">
                 <h2>Simran Collection</h2>
-                <img src="../portfolio images/simrancoll.png" alt="">
+                <img src="./portfolioimages/simrancoll.png" alt="">
                 <button class="gitbtns"><a href="https://github.com/simranPanjwani20/SimranCollection-website">Check on Github</a></button>
             </div>
             <div class="portfolio-img">
                 <h2>Word Generator and search</h2>
-                <img src="../portfolio images/word gen main.png" alt="">
+                <img src="./portfolioimages/word gen main.png" alt="">
                 <button class="gitbtns"><a href="https://github.com/simranPanjwani20/WordGenerator">Check on Github</a></button>
             </div>
             <div class="portfolio-img">
                 <h2>Google Homepage</h2>
-                <img src="../portfolio images/gh.png" alt="">
+                <img src="./portfolioimages/gh.png" alt="">
                 <button class="gitbtns"><a href="">Check on Github</a></button>
             </div>
             <div class="portfolio-img">
                 <h2>Ecommerce website homepage</h2>
-                <img src="../portfolio images/ecom.png" alt="">
+                <img src="./portfolioimages/ecom.png" alt="">
                 <button class="gitbtns"><a href="https://github.com/simranPanjwani20/Ecommerce-website-homepage">Check on Github</a></button>
             </div>
-            
+         <div class="maingit">
+            <button class="gitbtn"><a href="https://github.com/simranPanjwani20">View more on Github</a></button>
+        </div>
         </div>
     </section>
 
@@ -224,11 +226,13 @@
             <span>Connect With Us</span>
         </div>
         <div class="contact-form">
-            <form action="">
-                <input type="text" placeholder="Your Name">
-                <input type="email" name="" id="" placeholder="Your Email">
-                <textarea name="" id="" cols="30" rows="10" placeholder="Write Message Here..."></textarea>
-                <input type="button" value="Send" class="contact-button">
+            <form action="https://formspree.io/f/xvoyzlkl"
+            method="POST">
+                <input type="text" placeholder="Your Name" name="name" required>
+                <input type="email" id="" placeholder="Your Email" name="email" required>
+                <input type="number" placeholder="Your phone number" name="mobile no." minlength="10" maxlength="10" required>
+                <textarea name="message" cols="30" rows="10" required placeholder="Write Message Here..."></textarea>
+               <button class="submitbtn">submit</button>
             </form>
         </div>
     </section>
