--- a/index.html
+++ b/index.html
@@ -63,7 +63,11 @@
                     <!-- Box 1 -->
                     <div class="info-box">
                         <i class='bx bxs-user' ></i>
-                        <span><b> <a href="https://github.com/simranPanjwani20">Simran Panjwani</a></b></span>
+                        <span>Github:<b>  <a href="https://github.com/simranPanjwani20">Simran Panjwani</a></b></span>
+                    </div>
+                    <div class="info-box">
+                        <i class='bx bxs-user' ></i>
+                        <span> LinkedIn:<b>  <a href="https://www.linkedin.com/in/simran-panjwani-874407213">Simran Panjwani</a></b></span>
                     </div>
                     <!-- Box 2 -->
                     <div class="info-box">
@@ -77,7 +81,7 @@
                             </span>
                     </div>
                 </div>
-                <button class="button1"> <a  href="/SimranPanjwani_Resume.pdf" class="btn" download>Download Cv</a></button>
+                <button class="button1"> <a  href="/SimranResume.pdf" class="btn" download>Download Cv</a></button>
             </div>
         </div>
     </section>
@@ -87,20 +91,86 @@
         <div class="heading">
             <h2>Skills</h2>
         </div>
-        <div class="skills-container">
-            <div class="barskill">
-                <!-- Box 1 -->
+        <div class="skillset">
+               <div class="skillset1">
+                <div class="bars-boxes">
+                    <h3>JavaScript</h3>
+                    <div class="progress">
+                        <div  style="width: 85%" class="progress-bar  bg-warning progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%"></div>
+                      </div>
+                    </div>
+                    <div class="bars-boxes">
+                        <h3>TypeScript</h3>
+                        <div class="progress">
+                            <div  style="width: 85%" class="progress-bar  bg-warning progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%"></div>
+                          </div>
+                    </div>
+                    <div class="bars-boxes">
+                        <h3>React</h3>
+                        <div class="progress">
+                            <div  style="width: 88%" class="progress-bar bg-warning progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%"></div>
+                          </div>
+                    </div>
+                    <div class="bars-boxes">
+                        <h3>Git and Github</h3>
+                        <div class="progress">
+                            <div  style="width: 85%" class="progress-bar bg-warning progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%"></div>
+                          </div>
+                    </div>
+                    <div class="bars-boxes">
+                        <h3>SCSS</h3>
+                        <div class="progress">
+                            <div  style="width: 88%" class="progress-bar bg-warning progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%"></div>
+                          </div>
+                    </div> 
+                    <div class="bars-boxes">
+                        <h3>Ionic</h3>
+                        <div class="progress">
+                            <div  style="width: 90%" class="progress-bar bg-warning progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%"></div>
+                          </div>
+                    </div> 
+                    <div class="bars-boxes">
+                        <h3>Plasmic</h3>
+                        <div class="progress">
+                            <div  style="width: 90%" class="progress-bar bg-warning progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%"></div>
+                          </div>
+                    </div> 
+                    <div class="bars-boxes">
+                        <h3>SQL</h3>
+                        <div class="progress">
+                            <div  style="width: 70%" class="progress-bar bg-warning progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%"></div>
+                          </div>
+                    </div>
+                </div>
+                    <div class="skillset2">
+                    <div class="bars-boxes">
+                        <h3>Node.js</h3>
+                        <div class="progress">
+                            <div  style="width: 75%" class="progress-bar bg-warning progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%"></div>
+                          </div>
+                        </div>
+                    <div class="bars-boxes">
+                        <h3>Express.js</h3>
+                        <div class="progress">
+                            <div  style="width: 72%" class="progress-bar bg-warning progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%"></div>
+                          </div>
+                    </div>
+                    <div class="bars-boxes">
+                        <h3>Mongodb</h3>
+                        <div class="progress">
+                            <div  style="width: 78%" class="progress-bar bg-warning progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%"></div>
+                          </div>
+                </div>
                 <div class="bars-boxes">
                     <h3>HTML</h3>
                     <div class="progress">
                         <div  style="width: 95%" class="progress-bar bg-warning progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%"></div>
                       </div>
                 </div>
-                <!-- Box 2 -->
                 <div class="bars-boxes">
                     <h3>CSS</h3>
                     <div class="progress">
-                        <div  style="width: 86%" class="progress-bar bg-warning progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%"></div>
+                        <div  style="width: 90%" class="progress-bar bg-warning progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%"></div>
                       </div>
                 </div>
                 <div class="bars-boxes">
@@ -109,39 +179,20 @@
                         <div  style="width: 90%" class="progress-bar bg-warning progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%"></div>
                       </div>
                     </div>
-                <div class="bars-boxes">
-                    <h3>JavaScript</h3>
-                    <div class="progress">
-                        <div  style="width: 74%" class="progress-bar  bg-warning progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%"></div>
-                      </div>
-                    </div>
-                <!-- Box 4 -->
-                <div class="bars-boxes">
-                    <h3>React</h3>
-                    <div class="progress">
-                        <div  style="width: 80%" class="progress-bar bg-warning progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%"></div>
-                      </div>
-                    </div>
-                <div class="bars-boxes">
-                    <h3>Node.js</h3>
-                    <div class="progress">
-                        <div  style="width: 82%" class="progress-bar bg-warning progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%"></div>
-                      </div>
-                    </div>
-                <div class="bars-boxes">
-                    <h3>Express.js</h3>
-                    <div class="progress">
-                        <div  style="width: 72%" class="progress-bar bg-warning progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%"></div>
-                      </div>
-                </div>
-                <div class="bars-boxes">
-                    <h3>Mongodb</h3>
-                    <div class="progress">
-                        <div  style="width: 85%" class="progress-bar bg-warning progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%"></div>
-                      </div>
-            </div>
+                    <div class="bars-boxes">
+                        <h3>CPP</h3>
+                        <div class="progress">
+                            <div  style="width: 80%" class="progress-bar bg-warning progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%"></div>
+                          </div>
+                        </div> 
+                        <div class="bars-boxes">
+                            <h3>DSA</h3>
+                            <div class="progress">
+                                <div  style="width: 80%" class="progress-bar bg-warning progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%"></div>
+                              </div>
+                            </div>
         </div>
- 
+    </div>
     </section>
 
     <!-- services -->
