new project added

--- a/index.html
+++ b/index.html
@@ -236,6 +236,21 @@
         </div>
         <div class="portfolio-content">
             <div class="portfolio-img">
+                <h2>Myntra Clone</h2>
+                <img src="./portfolioimages/myntraclone.jpeg" alt="">
+                <button class="gitbtns" ><a href="https://myntraproducts.netlify.app/">Check on Github</a></button>
+            </div> 
+            <div class="portfolio-img">
+                <h2>Tickrbit</h2>
+                <img src="./portfolioimages/tickrbit.png" alt="">
+                <button class="gitbtns" ><a href="https://tickrbit.com/insider-transaction-trends?duration=%5B1d%5D">Check on Github</a></button>
+            </div> 
+            <div class="portfolio-img">
+                <h2>Momentum</h2>
+                <img src="./portfolioimages/Momentum.jpeg" alt="">
+                <button class="gitbtns" ><a href="#">Check on Github</a></button>
+            </div>
+            <div class="portfolio-img">
                 <h2>NewsApp</h2>
                 <img src="./portfolioimages/news.png" alt="">
                 <button class="gitbtns" ><a href="https://github.com/simranPanjwani20/NewsApp">Check on Github</a></button>
