--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     
-    <nav class="navbar navbar-expand-lg navbar-light bg-warning">
+    <nav class="navbar navbar-expand-lg navbar-light bg-warning fixed-top">
         <div class="container-fluid">
           <a class="navbar-brand" href="#"> <h3>Simran Panjwani</h3></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -58,7 +58,7 @@
                 <img src="https://www.bing.com/th?id=OIP.awAiMS1BCAQ2xS2lcdXGlwHaHH&w=150&h=144&c=8&rs=1&qlt=90&o=6&dpr=1.25&pid=3.1&rm=2" alt="">
             </div>
             <div class="about-text">
-                <p>I am a pre-final year student currently pursuing B.tech in Computer Science and Engineering from Bhagwan Parshuram Institute of Technology. I am a front-end developer and pretty proficient in <b>HTML, CSS,  JavaScript, and Bootstrap.</b> I have also worked with <b>node.js, express.js, MongoDB, and SQL.</b> Currently, I am learning <b> React.js</b> to further enhance my skill set. I have taken training from devtown in front-end and back-end and holds certification in web designing and JavaScript. I am also a content writer and love writing blogs in different niches. I can help you create amazing websites as per your requirements and preferences. You can have a look at my cv and portfolio to know more about my work.</p>
+                <p>I am a final year student currently pursuing B.tech in Computer Science and Engineering from Bhagwan Parshuram Institute of Technology. I have <b> 2 years experience as a front-end developer </b> and specialise in <b> React, Redux, JavaScript, Typescript, MUI, SCSS, CSS, Tailwind, Bootstrap, Ionic, Plasmic, Figma and Canva.</b> I have also worked with <b>node.js, express.js, MongoDB, and SQL.</b>I am also familiar with tools like <b> Github, git, bitbucket, Jira, aws cognito and amplify</b>. I have certifications in front-end and back-end development from devtown and in c++ from ED Spread. My hobby is content writing and love writing blogs in different niches. I can help you create amazing websites as per your requirements and preferences. You can have a look at my cv and portfolio to know more about my work.</p>
                 <div class="information">
                     <!-- Box 1 -->
                     <div class="info-box">
@@ -203,25 +203,21 @@
         <div class="services-content">
             <!-- Box 1 -->
             <div class="services-box">
-                <i class='bx bx-code-alt' ></i>
                 <h3>Web Development</h3>
                  <p>I can help you develop amazing websites and take your business on the next level.</p>
             </div>
             <!-- Box 2 -->
             <div class="services-box">
-                <i class='bx bx-server' ></i>
                 <h3>Front end Development</h3>
                  <p>I specialise in front end development and can give your audience a smooth user-experience.</p>
             </div>
             <!-- Box 3 -->
             <div class="services-box">
-                <i class='bx bx-brush' ></i>
                 <h3>Web Design</h3>
                  <p>I can create fascinating designs that will attract viewers.</p>
             </div>
 
             <div class="services-box">
-                <i class='bx bxl-wordpress' ></i>
                 <h3>Wordpress Developer</h3>
                  <p>Want to make your website with wordpress? I can help you with that as well.</p>
             </div>
@@ -318,12 +314,12 @@
         <p>Create By <a href="">Simran Panjwani</a> | All Right Reserved.</p>
     </div>
  
-    <!-- <script src="./script.js"></script> --> 
+  
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
     <script>
        var typed= new Typed(".auto-type", {
-           strings: ["Web Developer", "Competitive Coder", "Content Writer"],
+           strings: ["Web Developer", "Competitive Programmer", "Content Writer"],
            typeSpeed: 150,
            backSpeed: 150,
            loop: true
